<resources>
    <string name="app_name">DynamicWallpaper</string>

    <string name="facebook_app_id">509118243318148</string>

    <string name="theme_select">Selected</string>
    <string name="theme_download">Downloading...</string>
    <string name="theme_bt_set">set</string>
    <string name="theme_bt_download">Download</string>

    <string name="white_content">Please in white to let app live</string>
    <string name="permission_tip">Permissions</string>
    <string name="white_tip">Authorize the following permissions,app will be more stable!</string>

    <string name="permission_dialog_title1">Screen Permission</string>
    <string name="permission_dialog_content1">To show your call screen</string>
    <string name="permission_dialog_bt">SET</string>
    <string name="permission_dialog_title2">Call Permission</string>
    <string name="permission_dialog_content2">To answer the call in call screen</string>

</resources>
