<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_back"
    tools:context=".activity.ShowActivity">

    <ImageView
        android:id="@+id/show_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <com.free.good.dynamicwallpaper.view.CallThemeBackView
        android:id="@+id/calltheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/call_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/select_back"
        android:text="@string/theme_bt_set"
        android:textColor="#fff"
        android:textSize="16sp"
        android:visibility="gone" />

    <Button
        android:id="@+id/download_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/select_back"
        android:text="@string/theme_bt_download"
        android:textColor="#fff"
        android:textSize="16sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/call_load"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/call_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/call_load_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/call_load_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/theme_download"
            android:textColor="#fff"
            android:textSize="16sp" />

    </RelativeLayout>

</RelativeLayout>