<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/white_back"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/permission_tip"
            android:textColor="#000000"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/permission_screen_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <ImageView
                android:id="@+id/permission_icon_1"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:src="@mipmap/permission_call"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@+id/permission_icon_1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_dialog_title1"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_dialog_content1"
                    android:textColor="#999"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/permission_float_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:src="@mipmap/out_yes" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/permission_call_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp">

            <ImageView
                android:id="@+id/permission_icon_4"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:src="@mipmap/permission_contacts"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_toRightOf="@+id/permission_icon_4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_dialog_title2"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/permission_dialog_content2"
                    android:textColor="#999"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/permission_notify_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="24dp"
                android:src="@mipmap/out_yes" />


        </RelativeLayout>

        <TextView
            android:id="@+id/permission_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="23dp"
            android:text="DENY"
            android:textColor="#9B9B9B"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>