<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/permission_tip_back" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/permission_float_ll"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/permission_dialog_title1"
                        android:textColor="#ff333333"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/permission_dialog_content1"
                        android:textColor="#ff999999"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/permission_float_bt"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:background="@drawable/permission_tip_bt_back"
                    android:gravity="center"
                    android:text="@string/permission_dialog_bt"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/permission_notify_ll"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/permisstion_tip_bottom"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/permission_dialog_title2"
                        android:textColor="#ff333333"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/permission_dialog_content2"
                        android:textColor="#ff999999"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/permission_notify_bt"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:background="@drawable/permission_tip_bt_unback"
                    android:gravity="center"
                    android:text="@string/permission_dialog_bt"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/permission_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@mipmap/tip_close" />

</RelativeLayout>